derive-ex-tests/tests/compile_fail/compare_op/eq_field_not_impl_eq.rs
use derive_ex::derive_ex;

#[derive_ex(Eq, PartialEq)]
struct X {
    x: f64,
}

fn main() {}
